Changed the output of the feedforward file according to the question

--- a/Jupyter files/FeedForward.ipynb
+++ b/Jupyter files/FeedForward.ipynb
@@ -24,12 +24,12 @@
       "metadata": {
         "id": "nHecrZwjvvQT"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "n2wl7oNnunmv"
       },
@@ -42,29 +42,36 @@
         "        self.X, self.Y = X, Y\n",
         "        self.n_samples = len(X)\n",
         "        self.layers = layers\n",
-        "        self.weights = {}\n",
+        "        self.weights = self.initialize_weights()\n",
         "\n",
-        "        for i in range(len(layers) - 1):\n",
-        "            self.weights[f'w{i+1}'] = np.random.randn(layers[i], layers[i+1])\n",
-        "            self.weights[f'b{i+1}'] = np.zeros((1, layers[i+1]))\n",
+        "    def initialize_weights(self):\n",
+        "        weights = {}\n",
+        "        for i in range(len(self.layers) - 1):\n",
+        "            weights[f'w{i+1}'] = np.random.randn(self.layers[i], self.layers[i+1])\n",
+        "            weights[f'b{i+1}'] = np.zeros((1, self.layers[i+1]))\n",
+        "        return weights\n",
         "\n",
-        "    def activate_relu(self, z):\n",
-        "        return np.maximum(0, z)\n",
+        "    def activate(self, z, activation_type):\n",
+        "        if activation_type == 'relu':\n",
+        "            return np.maximum(0, z)\n",
+        "        elif activation_type == 'sigmoid':\n",
+        "            return 1 / (1 + np.exp(-z))\n",
+        "        elif activation_type == 'softmax':\n",
+        "            exp_vals = np.exp(z - np.max(z, axis=1, keepdims=True))\n",
+        "            return exp_vals / np.sum(exp_vals, axis=1, keepdims=True)\n",
+        "        else:\n",
+        "            raise ValueError(\"Unsupported activation type\")\n",
         "\n",
-        "    def activate_sigmoid(self, z):\n",
-        "        return 1 / (1 + np.exp(-z))\n",
-        "\n",
-        "    def activate_softmax(self, z):\n",
-        "        exp_vals = np.exp(z - np.max(z, axis=1, keepdims=True))\n",
-        "        return exp_vals / np.sum(exp_vals, axis=1, keepdims=True)\n",
+        "    def compute_layer_output(self, input_data, weight_key, bias_key, activation_type):\n",
+        "        z = np.dot(input_data, self.weights[weight_key]) + self.weights[bias_key]\n",
+        "        return self.activate(z, activation_type)\n",
         "\n",
         "    def forward_pass(self, data):\n",
-        "        activations = []\n",
+        "        activations = data\n",
         "        for i in range(len(self.layers) - 1):\n",
-        "            z = np.dot(data if i == 0 else activations[-1], self.weights[f'w{i+1}']) + self.weights[f'b{i+1}']\n",
-        "            a = self.activate_sigmoid(z) if i < len(self.layers) - 2 else self.activate_softmax(z)\n",
-        "            activations.append(a)\n",
-        "        return activations[-1]"
+        "            activation_type = 'sigmoid' if i < len(self.layers) - 2 else 'softmax'\n",
+        "            activations = self.compute_layer_output(activations, f'w{i+1}', f'b{i+1}', activation_type)\n",
+        "        return activations\n"
       ]
     },
     {
@@ -79,8 +86,8 @@
         "train_labels_one_hot = np.eye(10)[train_labels]\n",
         "test_labels_one_hot = np.eye(10)[test_labels]\n",
         "\n",
-        "#Any number of layers and their sizes can be given here\n",
-        "layer_sizes = [train_images.shape[1], 128, 64, 32, 10]  # Input, hidden1, hidden2,hidden3 output\n",
+        "#any number of layers and their sizes can be given\n",
+        "layer_sizes = [train_images.shape[1], 128, 64, 32, 10]\n",
         "\n",
         "#initialize, train and test our feedforward only model\n",
         "mlp = MLP(train_images, train_labels_one_hot, layer_sizes)\n",
@@ -97,23 +104,40 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JSDffsQdvRgR",
-        "outputId": "756bd998-7540-401f-dd6a-55824dd89466"
+        "outputId": "02af8cdc-4d2f-4f31-955d-540c5566b390"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "\u001b[1m29515/29515\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "\u001b[1m4422102/4422102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
             "Predicted probabilty after one feed forward call:\n",
-            "[5.19864080e-04 2.64697478e-02 4.59103352e-03 8.27560993e-05\n",
-            " 4.16777282e-02 5.18390604e-04 7.68410000e-02 9.95993713e-04\n",
-            " 1.28170817e-04 8.48175315e-01]\n",
+            "[1.00463724e-02 1.81969598e-04 8.72438690e-03 5.49132952e-02\n",
+            " 4.09427953e-02 2.36659618e-02 8.70717531e-02 1.33473096e-02\n",
+            " 7.19416357e-01 4.16897988e-02]\n",
             "True label value of Image:\n",
             "[0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "e2tUHDCbX3xu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
